tests/golden/err-pub-abolished/expected_error.txt
error: `:pub` は廃止されました
 --> ./entry.clum:1:1
  |
1 | :pub
  | ^^^^ 公開は `^名前` の行で宣言します（例: `^index`）
